added an installation script for notebooks path the mask-rcnn for colab_install.py

--- a/notebooks/inference/mask-rcnn.ipynb
+++ b/notebooks/inference/mask-rcnn.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,8 +33,8 @@
       "Building wheels for collected packages: colab-install\n",
       "  Building wheel for colab-install (setup.py): started\n",
       "  Building wheel for colab-install (setup.py): finished with status 'done'\n",
-      "  Created wheel for colab-install: filename=colab_install-1.0-py3-none-any.whl size=1648 sha256=8da4c055e9d38a3f180b8b65f50cfccc0106746d76c40d9a700c3faa0e957590\n",
-      "  Stored in directory: /private/var/folders/gg/96rxf8m56cjczyjj33_fgkx5xx4v3n/T/pip-ephem-wheel-cache-sy2kxv7w/wheels/56/dd/82/58381f152810994b67640f685cedc9c4e615f51250ad3502e1\n",
+      "  Created wheel for colab-install: filename=colab_install-1.0-py3-none-any.whl size=2732 sha256=f4ccfd24e9ca730003c1356cfa7ab407870cbf2f92c2434cdfa586b6cdcab0b7\n",
+      "  Stored in directory: /private/var/folders/gg/96rxf8m56cjczyjj33_fgkx5xx4v3n/T/pip-ephem-wheel-cache-g2mdixsy/wheels/56/dd/82/58381f152810994b67640f685cedc9c4e615f51250ad3502e1\n",
       "Successfully built colab-install\n",
       "Installing collected packages: colab-install\n",
       "  Attempting uninstall: colab-install\n",
@@ -43,14 +43,20 @@
       "      Successfully uninstalled colab-install-1.0\n",
       "Successfully installed colab-install-1.0\n",
       "use the colab-install command\n",
-      "Usage: colab-install [OPTIONS] COMMAND [ARGS]...\n",
+      "Usage: colab [OPTIONS] COMMAND [ARGS]...\n",
       "\n",
       "  This command prepares the notebook environment.\n",
       "\n",
       "\n",
       "\n",
       "Options:\n",
-      "  --help  Show this message and exit.\n"
+      "  -ll, --log-level [critical|fatal|error|warn|warning|info|debug|notset]\n",
+      "                                  log level\n",
+      "  --help                          Show this message and exit.\n",
+      "\n",
+      "Commands:\n",
+      "  init  Initialize the notebook\n",
+      "  show\n"
      ]
     }
    ],
@@ -69,7 +75,8 @@
     "pwd\n",
     "pip install utils/colab_install/ || exit 1;\n",
     "echo \"use the colab-install command\"\n",
-    "colab-install --help || exit 1;"
+    "colab --help || exit 1;\n",
+    "echo \"Great Success!\""
    ]
   },
   {
@@ -85,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/nhdchicken/nhd-colab.git"
+    "!colab init mp-mask-rcnn"
    ]
   },
   {
@@ -100,11 +107,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!pwd\n",
-    "!pip install -r nhd-colab/mask-rcnn/matterport/requirements.txt \n",
-    "!pip install nhd-colab/mask-rcnn/matterport/"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
