refactored the entire stack to use Tornado

--- a/notebooks/inference/mask-rcnn.ipynb
+++ b/notebooks/inference/mask-rcnn.ipynb
@@ -66,7 +66,7 @@
     "then\n",
     "    cd /content || exit 1;\n",
     "    echo \"Installing https://github.com/nhdchicken/nhd-colab.git\"\n",
-    "    git clone https://github.com/nhdchicken/nhd-colab.git || exit 1;\n",
+    "    git clone --recurse-submodules https://github.com/nhdchicken/nhd-colab.git || exit 1;\n",
     "    cd nhd-colab || exit 1;\n",
     "else\n",
     "    echo \"Not running in Colab - going to root of repos\"\n",
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we clone the repository under the /content directory"
+    "This will install the matterport/mask-rcnn dependencies and paths the code"
    ]
   },
   {
@@ -92,22 +92,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!colab init mp-mask-rcnn"
+    "%%bash\n",
+    "cd /content/nhd-colab/\n",
+    "colab init mp-mask-rcnn"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We install the requirements as well as the mask-rcnn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
