polishing the turd

--- a/notebooks/inference/mask-rcnn.ipynb
+++ b/notebooks/inference/mask-rcnn.ipynb
@@ -34,9 +34,8 @@
     "    cd `git rev-parse --show-toplevel` || exit 1;\n",
     "fi\n",
     "pwd\n",
-    "pip install utils/colab_install/ || exit 1;\n",
-    "echo \"use the colab-install command\"\n",
-    "colab --help || exit 1;\n",
+    "pip install utils/colab_install/ > /dev/null 2>&1 || exit 1;\n",
+    "colab > /dev/null 2>&1 || exit 1;\n",
     "echo \"Great Success!\""
    ]
   },
