changed the way code is being patched. See the documentation

--- a/notebooks/incubation/matterport-mask-rcnn/train_shapes.ipynb
+++ b/notebooks/incubation/matterport-mask-rcnn/train_shapes.ipynb
@@ -31,7 +31,11 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "if [ -d \"/content\" ] && [ ! -d \"/content/nhd-colab\" ]\n",
+    "if [  -d \"/content/nhd-colab\" ]\n",
+    "then\n",
+    "   echo \"Environment already initialized\"\n",
+    "\n",
+    "elif [ -d \"/content\" ] && [ ! -d \"/content/nhd-colab\" ]\n",
     "then\n",
     "    cd /content || exit 1;\n",
     "    echo \"Installing https://github.com/nhdchicken/nhd-colab.git\"\n",
@@ -67,7 +71,19 @@
     "else\n",
     "   echo \"running on local machine at \" `pwd` \n",
     "fi\n",
-    "colab init mp-mask-rcnn"
+    "if [ ! -f \"/content/nhd-colab/init.flag\"]\n",
+    "then\n",
+    "  # We do not want to run re-initialization twice\n",
+    "  colab init mp-mask-rcnn\n",
+    "  touch \"/content/nhd-colab/init.flag\"\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setting some path, loading the mrcnn project, and downloading the "
    ]
   },
   {
@@ -89,8 +105,13 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Root directory of the project\n",
-    "GIT_ROOT_DIR = pathlib.Path(subprocess.check_output('git rev-parse --show-toplevel', shell=True).decode('utf-8').strip())\n",
+    "GIT_ROOT_DIR = pathlib.Path('/content/nhd-colab')\n",
+    "\n",
+    "if not GIT_ROOT_DIR.is_dir():\n",
+    "  # Root directory of the project\n",
+    "  print(\"Trying to find the gitlab repository directory\")\n",
+    "  GIT_ROOT_DIR = pathlib.Path(subprocess.check_output('git rev-parse --show-toplevel', shell=True).decode('utf-8').strip())\n",
+    "\n",
     "assert GIT_ROOT_DIR.is_dir(), f\"git root dir {GIT_ROOT_DIR}\"\n",
     "\n",
     "MRCNN_ROOT_DIR = GIT_ROOT_DIR / 'mask-rcnn/matterport'\n",
@@ -99,7 +120,8 @@
     "assert SHAPES_DIR.is_dir(), f\"shapes directory not found {SHAPES_DIR}\"\n",
     "\n",
     "# Import Mask RCNN\n",
-    "sys.path.append(SHAPES_DIR)  # to be able to import shape.py\n",
+    "sys.path.append(str(MRCNN_ROOT_DIR))\n",
+    "sys.path.append(str(SHAPES_DIR))  # to be able to import shape.py\n",
     "from mrcnn.config import Config\n",
     "from mrcnn import utils\n",
     "import mrcnn.model as modellib\n",
@@ -115,7 +137,7 @@
     "COCO_MODEL_PATH = MRCNN_ROOT_DIR / \"mask_rcnn_coco.h5\"\n",
     "\n",
     "print(f\"GIT ROOT DIR:                                         {GIT_ROOT_DIR}\")\n",
-    "print(f\"MRCNN ROOT DIR:                                       {GIT_ROOT_DIR}\")\n",
+    "print(f\"MRCNN ROOT DIR:                                       {MRCNN_ROOT_DIR}\")\n",
     "print(f\"SHAPES DIR:                                           {SHAPES_DIR}\")\n",
     "print(f\"MODEL_DIR (where new model is stored):                {MODEL_DIR}\")\n",
     "print(f\"COCO_MODEL_PATH (where existing model is downloaded): {GIT_ROOT_DIR}\")\n",
