--- a/notebooks/inference/mask-rcnn.ipynb
+++ b/notebooks/inference/mask-rcnn.ipynb
@@ -23,7 +23,10 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "if [ -d \"/content\" ] && [ ! -d \"/content/nhd-colab\" ]\n",
+    "if [  -d \"/content/nhd-colab\" ]\n",
+    "then\n",
+    "   echo \"Environment already initialized\"\n",
+    "elif [ -d \"/content\" ] && [ ! -d \"/content/nhd-colab\" ]\n",
     "then\n",
     "    cd /content || exit 1;\n",
     "    echo \"Installing https://github.com/nhdchicken/nhd-colab.git\"\n",
@@ -53,8 +56,18 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "cd /content/nhd-colab/\n",
-    "colab init mp-mask-rcnn"
+    "if [ -d \"/content/nhd-colab\" ]\n",
+    "then\n",
+    "   cd /content/nhd-colab/\n",
+    "else\n",
+    "   echo \"running on local machine at \" `pwd` \n",
+    "fi\n",
+    "if [ ! -f \"/content/nhd-colab/init.flag\"]\n",
+    "then\n",
+    "  # We do not want to run re-initialization twice\n",
+    "  colab init mp-mask-rcnn\n",
+    "  touch \"/content/nhd-colab/init.flag\"\n",
+    "fi"
    ]
   },
   {
