--- a/notebooks/incubation/matterport-mask-rcnn/train_shapes.ipynb
+++ b/notebooks/incubation/matterport-mask-rcnn/train_shapes.ipynb
@@ -64,24 +64,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "if [ -d \"/content/nhd-colab\" ]\n",
-    "then\n",
-    "   cd /content/nhd-colab/\n",
-    "else\n",
-    "   echo \"running on local machine at \" `pwd` \n",
-    "fi\n",
-    "if [ ! -f \"/content/nhd-colab/init.flag\" ]\n",
-    "then\n",
-    "  # We do not want to run re-initialization twice\n",
-    "  colab init mp-mask-rcnn\n",
-    "  touch \"/content/nhd-colab/init.flag\"\n",
-    "fi"
+    "!colab init mp-mask-rcnn"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Setting some path, loading the mrcnn project, and downloading the "
    ]
@@ -89,7 +81,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -150,7 +146,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Configurations"
    ]
@@ -158,7 +158,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class ShapesConfig(Config):\n",
@@ -201,7 +205,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Notebook Preferences"
    ]
@@ -209,7 +217,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_ax(rows=1, cols=1, size=8):\n",
@@ -226,7 +238,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Dataset\n",
     "\n",
@@ -393,7 +409,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Load and display random samples\n",
@@ -406,7 +426,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Create Model"
    ]
@@ -426,7 +450,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -449,7 +476,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Training\n",
     "\n",
@@ -498,7 +529,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Save weights\n",
@@ -510,7 +545,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Detection"
    ]
@@ -518,7 +557,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "class InferenceConfig(ShapesConfig):\n",
@@ -540,6 +578,34 @@
     "# Load trained weights\n",
     "print(\"Loading weights from \", model_path)\n",
     "model.load_weights(model_path, by_name=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test on a random image\n",
+    "image_id = random.choice(dataset_val.image_ids)\n",
+    "original_image, image_meta, gt_class_id, gt_bbox, gt_mask =\\\n",
+    "    modellib.load_image_gt(dataset_val, inference_config, \n",
+    "                           image_id, use_mini_mask=False)\n",
+    "\n",
+    "log(\"original_image\", original_image)\n",
+    "log(\"image_meta\", image_meta)\n",
+    "log(\"gt_class_id\", gt_class_id)\n",
+    "log(\"gt_bbox\", gt_bbox)\n",
+    "log(\"gt_mask\", gt_mask)\n",
+    "\n",
+    "visualize.display_instances(original_image, gt_bbox, gt_mask, gt_class_id, \n",
+    "                            dataset_train.class_names, figsize=(8, 8))"
    ]
   },
   {
