--- a/notebooks/inference/mask-rcnn.ipynb
+++ b/notebooks/inference/mask-rcnn.ipynb
@@ -55,19 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "if [ -d \"/content/nhd-colab\" ]\n",
-    "then\n",
-    "   cd /content/nhd-colab/\n",
-    "else\n",
-    "   echo \"running on local machine at \" `pwd` \n",
-    "fi\n",
-    "if [ ! -f \"/content/nhd-colab/init.flag\" ]\n",
-    "then\n",
-    "  # We do not want to run re-initialization twice\n",
-    "  colab init mp-mask-rcnn\n",
-    "  touch \"/content/nhd-colab/init.flag\"\n",
-    "fi"
+    "!colab init mp-mask-rcnn"
    ]
   },
   {
