--- a/notebooks/incubation/matterport-mask-rcnn/train_shapes.ipynb
+++ b/notebooks/incubation/matterport-mask-rcnn/train_shapes.ipynb
@@ -69,11 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "Setting some path, loading the mrcnn project, and downloading the "
    ]
@@ -81,11 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -146,11 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Configurations"
    ]
@@ -158,11 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ShapesConfig(Config):\n",
@@ -205,11 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Notebook Preferences"
    ]
@@ -217,11 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_ax(rows=1, cols=1, size=8):\n",
@@ -238,11 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Dataset\n",
     "\n",
@@ -409,11 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load and display random samples\n",
@@ -426,11 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Create Model"
    ]
@@ -443,17 +407,14 @@
    "source": [
     "# Create model in training mode\n",
     "model = modellib.MaskRCNN(mode=\"training\", config=config,\n",
-    "                          model_dir=st(MODEL_DIR))"
+    "                          model_dir=str(MODEL_DIR))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -476,11 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Training\n",
     "\n",
@@ -529,11 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Save weights\n",
@@ -545,11 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Detection"
    ]
@@ -557,6 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class InferenceConfig(ShapesConfig):\n",
@@ -578,34 +528,6 @@
     "# Load trained weights\n",
     "print(\"Loading weights from \", model_path)\n",
     "model.load_weights(model_path, by_name=True)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test on a random image\n",
-    "image_id = random.choice(dataset_val.image_ids)\n",
-    "original_image, image_meta, gt_class_id, gt_bbox, gt_mask =\\\n",
-    "    modellib.load_image_gt(dataset_val, inference_config, \n",
-    "                           image_id, use_mini_mask=False)\n",
-    "\n",
-    "log(\"original_image\", original_image)\n",
-    "log(\"image_meta\", image_meta)\n",
-    "log(\"gt_class_id\", gt_class_id)\n",
-    "log(\"gt_bbox\", gt_bbox)\n",
-    "log(\"gt_mask\", gt_mask)\n",
-    "\n",
-    "visualize.display_instances(original_image, gt_bbox, gt_mask, gt_class_id, \n",
-    "                            dataset_train.class_names, figsize=(8, 8))"
    ]
   },
   {
