added a discovery notebook to start exploring YoloV4

--- a/notebooks/inference/mask-rcnn.ipynb
+++ b/notebooks/inference/mask-rcnn.ipynb
@@ -64,6 +64,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This cell goes to the repository root of nhd-colab and sets the NHD_COLAB_REPOS_ROOT variable.\n",
+    "import os\n",
+    "import pathlib\n",
+    "import subprocess\n",
+    "NHD_COLAB_REPOS_ROOT = pathlib.Path(subprocess.check_output('git rev-parse --show-toplevel', shell=True).decode('utf-8').strip())\n",
+    "os.chdir(NHD_COLAB_REPOS_ROOT)\n",
+    "assert os.getcwd() == str(NHD_COLAB_REPOS_ROOT.cwd())\n",
+    "assert os.getcwd().endswith('/nhd-colab')\n",
+    "print(f\"NHD_COLAB_REPOS_ROOT={NHD_COLAB_REPOS_ROOT}\\nOK!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "import sys\n",
     "import random\n",
@@ -74,7 +91,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Root directory of the project with respect to the /content directory in the colab container.\n",
-    "ROOT_DIR = os.path.abspath(\"./nhd-colab/mask-rcnn/matterport\")\n",
+    "ROOT_DIR = os.path.join(REPOSITORY, \"mask-rcnn\", \"matterport\")\n",
     "\n",
     "# Import Mask RCNN\n",
     "sys.path.append(ROOT_DIR)  # To find local version of the library\n",
