fixed some initialization mistake. Added a cell to mount the drive and perform weight conversion

--- a/notebooks/inference/mask-rcnn.ipynb
+++ b/notebooks/inference/mask-rcnn.ipynb
@@ -68,7 +68,12 @@
     "import os\n",
     "import pathlib\n",
     "import subprocess\n",
-    "NHD_COLAB_REPOS_ROOT = pathlib.Path(subprocess.check_output('git rev-parse --show-toplevel', shell=True).decode('utf-8').strip())\n",
+    "if os.getcwd() == '/content':\n",
+    "  print(\"Running in Colab\")\n",
+    "  NHD_COLAB_REPOS_ROOT = pathlib.Path(os.getcwd()) / 'nhd-colab'\n",
+    "else:\n",
+    "  print(\"Finding root of git repository\")\n",
+    "  NHD_COLAB_REPOS_ROOT = pathlib.Path(subprocess.check_output('git rev-parse --show-toplevel', shell=True).decode('utf-8').strip())\n",
     "os.chdir(NHD_COLAB_REPOS_ROOT)\n",
     "assert os.getcwd() == str(NHD_COLAB_REPOS_ROOT.cwd())\n",
     "assert os.getcwd().endswith('/nhd-colab')\n",
