--- a/notebooks/inference/mask-rcnn.ipynb
+++ b/notebooks/inference/mask-rcnn.ipynb
@@ -64,20 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This cell goes to the repository root of nhd-colab and sets the NHD_COLAB_REPOS_ROOT variable.\n",
-    "import os\n",
-    "import pathlib\n",
-    "import subprocess\n",
-    "if os.getcwd() == '/content':\n",
-    "  print(\"Running in Colab\")\n",
-    "  NHD_COLAB_REPOS_ROOT = pathlib.Path(os.getcwd()) / 'nhd-colab'\n",
-    "else:\n",
-    "  print(\"Finding root of git repository\")\n",
-    "  NHD_COLAB_REPOS_ROOT = pathlib.Path(subprocess.check_output('git rev-parse --show-toplevel', shell=True).decode('utf-8').strip())\n",
-    "os.chdir(NHD_COLAB_REPOS_ROOT)\n",
-    "assert os.getcwd() == str(NHD_COLAB_REPOS_ROOT.cwd())\n",
-    "assert os.getcwd().endswith('/nhd-colab')\n",
-    "print(f\"NHD_COLAB_REPOS_ROOT={NHD_COLAB_REPOS_ROOT}\\nOK!\")"
+    "from nhdcolab.environment import NHDEnvironment\n",
+    "NHD_ENV = NHDEnvironment(gdrive_mount=False)"
    ]
   },
   {
@@ -96,7 +84,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Root directory of the project with respect to the /content directory in the colab container.\n",
-    "ROOT_DIR = os.path.join(REPOSITORY, \"mask-rcnn\", \"matterport\")\n",
+    "ROOT_DIR = os.path.join(NHD_COLAB_REPOS_ROOT, \"mask-rcnn\", \"matterport\")\n",
     "\n",
     "# Import Mask RCNN\n",
     "sys.path.append(ROOT_DIR)  # To find local version of the library\n",
@@ -273,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
