--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -20,19 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not running in Colab - going to root of repos\n",
-      "/Users/lpbrac/gitlab/pyops/nhd/nhd-colab\n",
-      "Great Success!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "if [  -d \"/content/nhd-colab\" ]\n",
@@ -49,8 +39,8 @@
     "    cd `git rev-parse --show-toplevel` || exit 1;\n",
     "fi\n",
     "pwd\n",
-    "pip install utils/colab_install/ > /dev/null 2>&1 || exit 1;\n",
-    "colab > /dev/null 2>&1 || exit 1;\n",
+    "pip install utils/nhdcolab > /dev/null 2>&1 || exit 1;\n",
+    "nhdcolab > /dev/null 2>&1 || exit 1;\n",
     "echo \"Great Success!\""
    ]
   },
@@ -66,49 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running TensorFlow Version 2.2.0\u001B[0m\n",
-      "\u001B[33mgoing to repos root dir /Users/lpbrac/gitlab/pyops/nhd/nhd-colab\u001B[0m\n",
-      "loading install config /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/install.yml\u001B[0m\n",
-      "\u001B[36mlist of components\u001B[0m\n",
-      "\u001B[32mmp-mask-rcnn\u001B[0m\n",
-      "\u001B[36minstalls the Mask-RCNN which is a sub-module under nhd-colab/mask-rcnn/matterport\n",
-      "the original repository is https://github.com/matterport/Mask_RCNN\n",
-      "\u001B[0m\n",
-      "\u001B[32myolov4-tf\u001B[0m\n",
-      "\u001B[36mInstall the requirement for YoloV4 submodules\n",
-      "\u001B[0m\n",
-      "\u001B[32myaml-example\u001B[0m\n",
-      "\u001B[36mThis is just an example\n",
-      "\u001B[0m\n",
-      "--------------------------\n",
-      "running TensorFlow Version 2.2.0\u001B[0m\n",
-      "\u001B[33mgoing to repos root dir /Users/lpbrac/gitlab/pyops/nhd/nhd-colab\u001B[0m\n",
-      "loading install config /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/install.yml\u001B[0m\n",
-      "\u001B[32mComponent mp-mask-rcnn\u001B[0m\n",
-      "\u001B[36m>>> processing patch group tensorflow_2\u001B[0m\n",
-      "\u001B[32m\trequirements\u001B[0m\n",
-      "\u001B[32m\t\toriginal /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/mask-rcnn/matterport/requirements.txt\u001B[0m\n",
-      "\u001B[32m\t\tmodified /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/patches/matterport-mrcnn/requirements.txt\u001B[0m\n",
-      "\u001B[32m\tmodel\u001B[0m\n",
-      "\u001B[32m\t\toriginal /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/mask-rcnn/matterport/mrcnn/model.py\u001B[0m\n",
-      "\u001B[32m\t\tmodified /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/patches/matterport-mrcnn/model.py\u001B[0m\n",
-      "\u001B[32m\tutils\u001B[0m\n",
-      "\u001B[32m\t\toriginal /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/mask-rcnn/matterport/mrcnn/utils.py\u001B[0m\n",
-      "\u001B[32m\t\tmodified /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/patches/matterport-mrcnn/utils.py\u001B[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!colab show -d \n",
+    "!nhdcolab show -d \n",
     "!echo --------------------------\n",
-    "!colab patch -l mp-mask-rcnn"
+    "!nhdcolab patch -l mp-mask-rcnn"
    ]
   },
   {
@@ -124,30 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running TensorFlow Version 2.2.0\u001B[0m\n",
-      "\u001B[33mgoing to repos root dir /Users/lpbrac/gitlab/pyops/nhd/nhd-colab\u001B[0m\n",
-      "loading install config /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/install.yml\u001B[0m\n",
-      "\u001B[36minstalling components\u001B[0m\n",
-      "\u001B[32mmp-mask-rcnn already installed - skipping\u001B[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!colab init mp-mask-rcnn --patch-group tensorflow_2"
+    "!nhdcolab init mp-mask-rcnn --patch-group tensorflow_2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setting the root of the repos\n",
+    "# Loading the Environment\n",
     "\n",
     "this piece of code set the current working directory at the root of the nhd-colab repos. \n",
     "It also sets the **NHD_COLAB_REPOS_ROOT** to that location (type pathlib.Path()).\n"
@@ -155,73 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding root of git repository\n",
-      "NHD_COLAB_REPOS_ROOT=/Users/lpbrac/gitlab/pyops/nhd/nhd-colab\n",
-      "OK!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# This cell goes to the repository root of nhd-colab and sets the NHD_COLAB_REPOS_ROOT variable.\n",
-    "import os\n",
-    "import pathlib\n",
-    "import subprocess\n",
-    "if os.getcwd() == '/content':\n",
-    "  print(\"Running in Colab\")\n",
-    "  NHD_COLAB_REPOS_ROOT = pathlib.Path(os.getcwd()) / 'nhd-colab'\n",
-    "else:\n",
-    "  print(\"Finding root of git repository\")\n",
-    "  NHD_COLAB_REPOS_ROOT = pathlib.Path(subprocess.check_output('git rev-parse --show-toplevel', shell=True).decode('utf-8').strip())\n",
-    "os.chdir(NHD_COLAB_REPOS_ROOT)\n",
-    "assert os.getcwd() == str(NHD_COLAB_REPOS_ROOT.cwd())\n",
-    "assert os.getcwd().endswith('/nhd-colab')\n",
-    "print(f\"NHD_COLAB_REPOS_ROOT={NHD_COLAB_REPOS_ROOT}\\nOK!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Mount the Google Drive (Optional)\n",
+    "from nhdcolab.environment import NHDEnvironment\n",
+    "NHD_ENV = NHDEnvironment(gdrive_mount=True)\n",
     "\n",
-    "Mounts the google drive and store the location in **NHD_COLAB_DRIVE**. Otherwise, create a temporary drive in the root repository."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Google drive not mounted since not running in Colab - using /Users/lpbrac/gitlab/pyops/nhd/nhd-colab/drive\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import pathlib\n",
-    "\n",
-    "NHD_COLAB_DRIVE = pathlib.Path(\"/content/drive/My Drive\")\n",
-    "\n",
-    "try:\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/drive/')\n",
-    "except ModuleNotFoundError:\n",
-    "    NHD_COLAB_DRIVE = pathlib.Path(os.environ.get('NHD_COLAB_DRIVE', NHD_COLAB_REPOS_ROOT / 'drive'))\n",
-    "    print(f\"Google drive not mounted since not running in Colab - using {NHD_COLAB_DRIVE}\")\n",
-    "    if not NHD_COLAB_DRIVE.is_dir():\n",
-    "        NHD_COLAB_DRIVE.mkdir(parents=True, exist_ok=True)\n",
-    "assert NHD_COLAB_DRIVE.is_dir(), f\"{NHD_COLAB_DRIVE} not found\"\n"
+    "print(\"Environment Variables\")\n",
+    "print(f\"\\tNHD_ENV.IN_COLAB Returns True if running in Colab [{NHD_ENV.IN_COLAB}]\\n\")\n",
+    "print(f\"\\tNHD_COLAB_REPOS_ROOT Returns the root location of the colab repository (as pathlib.Path) [{NHD_ENV.NHD_COLAB_REPOS_ROOT}]\\n\")     \n",
+    "print(f\"\\tNHD_ENV.NHD_COLAB_DRIVE Returns the location of the google drive location (as pathlib.Path) [{NHD_ENV.NHD_COLAB_DRIVE}]\\n\")\n",
+    "print(f\"\\tNHD_ENV.NHD_COLAB_TEST_MATERIAL Returns the location of the test material (as pathlib.Path) [{NHD_ENV.NHD_COLAB_TEST_MATERIAL}\\n]\")\n",
+    "print(f\"\\tNHD_ENV.IS_JETSON Return True if running on Jetson board, false otherwise. [{NHD_ENV.IS_JETSON}]\\n\")\n",
+    "\n"
    ]
   }
  ],
@@ -241,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
